# FractonautCPP

./: BUILD_ANDROID.md  CMakeLists.txt  JStoCPP.md  QUICK_START_ANDROID.txt  README.md  appconstitution.md  build_android.sh  qtdevelopmentrules.md
android/: AndroidManifest.xml  build.gradle
android/res/values/: strings.xml
include/: Constants.h
resources/: resources.qrc
resources/shaders/: fractal.frag  fractal.vert  fractal_double.frag
src/: main.cpp
src/rendering/: FractalGLWidget.cpp  FractalGLWidget.h  ShaderManager.cpp  ShaderManager.h
